# ndispers

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  __init__.py  _baseclass.py  helper.py  pyproject.toml  setup.py  test.py
docs/source/: conf.py  index.rst
docs/source/intro/: install.rst
docs/source/introduction/: index.rst  install.rst
media/: __init__.py
media/crystals/: _CLBO.py  _KDP.py  _KTP.py  _LB4.py  _LBO1990.py  _LBO1995.py  __init__.py  _alphaBBO.py  _betaBBO1987.py  _betaBBO1995.py  _betaBBO2010.py  _betaBBO2018.py  _betabbo_1987.py  _betabbo_2018.py  _calcite.py  _lbo.py
media/glasses/: __init__.py  _caf2.py  _fusedsilica.py
ndispers/: __init__.py  _baseclass.py
ndispers.egg-info/: PKG-INFO  SOURCES.txt
ndispers/groups/: __init__.py  _uniax_neg_3m.py
ndispers/media/crystals/: _CLBO.py  _KDP.py  _KTP.py  _LB4.py  _LBO1991.py  _LBO1994.py  _LBO1995.py  _LBO_Castech.py  _LBO_EKSMA.py  _LBO_Ghosh1995.py  _LBO_KK1994.py  _LBO_KK2018.py  _LBO_Newlight.py  _SLT_MgO_doped.py  __init__.py  _alphaBBO.py  _betaBBO1987.py  _betaBBO1995.py  _betaBBO2010.py  _betaBBO2018.py  _betaBBO_Eimerl1987.py  _betaBBO_Ghosh1995.py  _betaBBO_KK2010.py  _betaBBO_Tamosauskas2018.py  _calcite.py
ndispers/media/glasses/: _caf2.py  _fusedsilica.py
ndispers/tests/: test_LBO.py  test_betaBBO.py
tests/: test1.py
