[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ndispers"
dynamic = ["version"]
description = "Python package for calculating refractive index dispersion of various materials"
readme = "README.md"
license = ""
authors = [
    { name = "Akihiko Shimura", email = "akhksh@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mpmath",
    "numpy",
    "scipy",
    "sympy",
]

[project.urls]
Homepage = "https://github.com/akihiko-shimura/ndispers"

[tool.hatch.version]
path = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "/ndispers",
]

[tool.hatch.version]
source = "vcs"